Changing workspaces which switches modes with multiple windows doesn't properly update #66200

Closed
opened 2019-06-28 06:15:34 +02:00 by Campbell Barton · 3 comments

The problem is that changing modes only updates tools for the current window.

Another window may have a different workspace but use the same object which can change modes.

In debug builds this causes an assert.

To redo:

  • Factory Settings
  • New Main Window
  • In the second window set the transform tool.
  • In the first window set the 'Modelling' workspace.

This asserts: BLI_assert failed: source/blender/windowmanager/intern/wm_toolsystem.c:86, WM_toolsystem_ref_from_context(), at 'tref == sa->runtime.tool'

Adding this for reference, it relates to #63694 (multi window tool support.)

The problem is that changing modes only updates tools for the current window. Another window may have a different workspace but use the same object which can change modes. In debug builds this causes an assert. To redo: - Factory Settings - New Main Window - In the second window set the transform tool. - In the first window set the 'Modelling' workspace. This asserts: `BLI_assert failed: source/blender/windowmanager/intern/wm_toolsystem.c:86, WM_toolsystem_ref_from_context(), at 'tref == sa->runtime.tool'` *Adding this for reference, it relates to #63694 (multi window tool support.)*
Author
Owner

Added subscriber: @ideasman42

Added subscriber: @ideasman42

This issue was referenced by 37d5d10849

This issue was referenced by 37d5d10849978107b4b513e358b14b48525e238e
Author
Owner

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Campbell Barton self-assigned this 2019-06-28 09:45:20 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66200
No description provided.