Fix T66200: Changing workspaces / modes doesn't update tools

Changing the workspace or mode from one window may need to change the
active tool in another window since two different workspaces
may share an object.